# zksync-wtf

./: README.md  index.html  merge.py  zksync_wtf_data.json
airbender_hashes/: Cargo.toml  airbender_verifier_index.json
airbender_hashes/src/: README.md  main.rs
chains/: README.md  csv_to_webdata.py
contract_addresses/: Cargo.toml  contract_addresses.json
contract_addresses/src/: main.rs
data/: airbender.json  chains.json  commitments.json  contract_addresses.json
prover_commits/: Cargo.toml  README.md  commitments.json
prover_commits/src/: main.rs
