[package]
name = "zk-wtf-bridgehub"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
# Alloy meta crate (re-exports providers, transports, primitives, sol! macro, etc.)
alloy = { version = "0.8", features = ["full"] }